admin signin UI

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,6 +8,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-       
+         <activity android:label="@string/title_activity_admin" android:name="vote.example.offlinevote.Admin" />
     </application>
 </manifest>
