--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,5 +10,6 @@
         </activity>
          <activity android:label="@string/title_activity_admin" android:name="vote.example.offlinevote.Admin" />
 		  <activity android:label="@string/title_activity_signup" android:name="vote.example.offlinevote.Signup" />
+		   <activity android:label="@string/title_activity_reset_password" android:name="vote.example.offlinevote.ResetPassword" />
     </application>
 </manifest>
